--- a/education.html
+++ b/education.html
@@ -202,16 +202,16 @@
 <h1><font face="Serif" size="6%" color="#73543E">|-----------------------------EDUCATION-------------------------|</font></h1>
 
 
-<h3>Bachelor of Business Administration (Hons.) Finance</h3>
+<h3>BACHELOR OF BUSINESS ADMINISTRATION (HONS.) FINANCE</h3>
 
 <h4>2021-2024</h4>
 
 <p><em>Universiti Teknologi Mara Kampus Kota Bharu (UiTM)</em></p>
 
-<p>I a former student of Universiti Teknologi Mara Kampus Kota Bharu, main course in business finance. I had been awarded a 3.80 CGPA. 
+<p>I am a former student of Universiti Teknologi Mara Kampus Kota Bharu, main course in business finance. I had been awarded a 3.80 CGPA. 
     I received a Dean's List enlistment after demonstrating strong academic achievement.</p>
 
-<a href="C:\Users\HONOR\Documents\2023_IMS456_2424A_INDIVIDUAL\PICTURES\DEAN LIST AWARD.png" style="background-color: #c87c7c; 
+<a href="PICTURES\DEAN LIST AWARD.png" style="background-color: #c87c7c; 
 
 color: #68c5a8; 
     border: none;
@@ -232,11 +232,11 @@ color: #68c5a8;
 
 <h4>2018 - 2021</h4>
 
-<p><em>POLITEKNIK PRIMIER UNGKU OMAR (PUO)</em></p>
+<p><em>UNGKU OMAR POLYTECHNIC (PUO)</em></p>
 
-<p>I am a former student of Politeknik Primier Ungku Omar in course Diploma Accountancy.  This course also really give me some inspiration to know more about being accountant , so thats why I am very inquirer to know everything about being a profesional accountant and seeking for a job who relatable in my course.  So here I attached my transcript result in my Diploma year with my last CGPA is 3.66.</p>
+<p>I am a former student of UNGKU OMAR POLYTECHNIC in course Diploma Accountancy.  This course also really give me some inspiration to know more about being accountant , so thats why I am very inquirer to know everything about being a profesional accountant and seeking for a job who relatable in my course.  So here I attached my transcript result in my Diploma year with my last CGPA is 3.66.</p>
 
-<a href="C:\Users\HONOR\Documents\2023_IMS456_2424A_INDIVIDUAL\PICTURES\TRANSKRIP PUO.png" style="background-color: #c87c7c; 
+<a href="PICTURES\SIJIL TAMAT BLAJAR PUO.png" style="background-color: #c87c7c; 
 
 color: #68c5a8; 
     border: none;
@@ -284,9 +284,9 @@ color: #68c5a8;
 
 <p><em>SM Sains Tengku Muhammad Faris Petra</em></p>
 
-<p>My result for PT3 is 8A, 2C, </p>
+<p>My result for PT3 is 8A, 1B, 1C, </p>
 
-<a href="https://drive.google.com/file/d/16JQ3H5M7r8X_5DBkpE-d4btWMZ7RrU-0/view" style="background-color: #c87c7c; 
+<a href="PICTURES\sijil pt3.png" style="background-color: #c87c7c; 
 
 color: #68c5a8; 
     border: none;
@@ -298,7 +298,7 @@ color: #68c5a8;
     display: inline-block;
     font-size: 16px;
     margin: 3px 1px;
-    cursor: pointer;">OPEN ME</a>
+    cursor: pointer;">OPEN ME!</a>
 	
 </div></td>
 <!--************* CONTENT SECTION END *************-->
