--- a/achievement.html
+++ b/achievement.html
@@ -199,15 +199,17 @@
 
 <h1><font face="Serif" size="6%" color="#73543E">|-------------------------ACHIEVEMENT-----------------------|</font></h1>
 
-<h3>MUET</h3>
+<h3>CERTIFICATE OF INTERNSHIP PROGRAMME WITH EXCELLENT</h3>
 
-<h4>2020</h4>
+<h4>2021</h4>
 
-<p><em>POLITEKNIK PRIMIER UNGKU OMAR</em></p>
+<p><em>UNGKU OMAR POLYTECHNIC</em></p>
 
-<p>BAND ACHIEVED: 3</p>
+<p>Result: Excellent</p>
 
-<a href="PICTURES\sijil muet.png"  style="background-color: #c87c7c; 
+
+
+<a href="PICTURES\sijil pghrgaan intern.png"  style="background-color: #c87c7c; 
 
 color: #68c5a8; 
     border: none;
@@ -224,39 +226,16 @@ color: #68c5a8;
 <br>
 <br>
 
-<h3>GENERAL CERTIFICATE PF EDUCATION ORDINARY LEVEL</h3>
-
-<h4>2018</h4>
-
-<p><em>SMK ZAINAB</em></p>
-
-
-<a href="https://drive.google.com/file/d/1JlEhlI8kd_PNIJadoXpgk1oR5l_g4kGr/view" style="background-color: #000000; 
-
-color: #68c5a8; 
-    border: none;
-    color: white;
-    padding: 8px 15px;
-    text-align: center;
-    box-shadow: 2px 2px 2px #333333;
-	text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 3px 1px;
-    cursor: pointer;">VIEW</a>
-
-<br>
-<br>
-
-<h3>ANUGERAH PELAJAR CEMERLANG STPM</h3>
+<h3>MUET</h3>
 
 <h4>2020</h4>
 
-<p><em>SMK ZAINAB 1 (SMKZ1)</em></p>
+<p><em>UNGKU OMAR POLYTECHNIC</em></p>
 
-<p>I have received a STPM excellent student award for getting a 3.09 result</p>
+<p>Band Achieved: 3</p>
 
-<a href="https://drive.google.com/file/d/1otYGOK5nUlkW15pqMD2s3wG9ML0lI9fm/view" style="background-color: #000000; 
+
+<a href="PICTURES\sijil muet.png" style="background-color: #c87c7c; 
 
 color: #68c5a8; 
     border: none;
@@ -268,12 +247,37 @@ color: #68c5a8;
     display: inline-block;
     font-size: 16px;
     margin: 3px 1px;
-    cursor: pointer;">VIEW</a>
+    cursor: pointer;">OPEN ME!</a>
 
 <br>
 <br>
 
-<hr size="1" width="100%" align="center" noshade="noshade" title="horizontal rules" color="black">
+<h3>ACHIEVEMENT IN TRENDS INTERNATIONAL MATHEMATICS AND SCIENCE STUDY (TIMSS)</h3>
+
+<h4>2015</h4>
+
+<p><em>SM SAINS TENGKU MUHAMMAD FARIS PETRA</em></p>
+
+<p>I had been awarded an EXCELLENT result in TIMSS examination.</p>
+
+<a href="PICTURES\sijil pghrgaan timss.png" style="background-color: #c87c7c; 
+
+color: #68c5a8; 
+    border: none;
+    color: white;
+    padding: 8px 15px;
+    text-align: center;
+    box-shadow: 2px 2px 2px #333333;
+	text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 3px 1px;
+    cursor: pointer;">OPEN ME!</a>
+
+<br>
+<br>
+
+<hr size="5" width="100%" align="center" noshade="noshade" title="horizontal rules" color="#E9967A"/>
 
 
 <div align="center">
